# PCL_EXAMPLES

./: README.md  ideas interesantes
DetectPeople/: CMakeLists.txt  CMakeLists.txt~  detectPeople.cpp
FEATURES_1/: CMakeLists.txt  CMakeLists.txt~  features_1.cpp  features_1.cpp~  features_2.cpp~  features_register_1.cpp~
HOLA_KINECT/: README.txt  README.txt~  openni_grabber.cpp  openni_grabber.cpp~
HOLA_KINECT_2/: CMakeLists.txt  CMakeLists.txt~
NORM_1/: CMakeLists.txt  CMakeLists.txt~  normales.cpp  normales.cpp~
PASS_T/: CMakeLists.txt  pass.cpp  pass.cpp~
PASS_T_PCD/: CMakeLists.txt  pass_t_pcd.cpp  pass_t_pcd.cpp~
REGISTRATION_1/: CMakeLists.txt  CMakeLists.txt~  registration_1.cpp  registration_1.cpp~  registration_2.cpp  registration_2.cpp~  registration_3.cpp~  registration_4.cpp~  registration_5.cpp~
SACA_FOTO/: CMakeLists.txt  CMakeLists.txt~  saca_foto_pcd.cpp  saca_foto_pcd.cpp~
cluster_extraction/: cluster_extraction.cpp  cluster_extraction.cpp~
extract_indices/: CMakeLists.txt~  extract_indices.cpp  extract_indices.cpp~  planar_segmentation.cpp~
matrix_transform/: CMakeLists.txt  CMakeLists.txt~  ejecucion  matrix_transform.cpp
statistical_removal/: CMakeLists.txt  statistical_removal.cpp  statistical_removal.cpp~
